<resources>
    <string name="app_name">AI_Fashion</string>
    <string name="title_dressing">穿搭</string>
    <string name="title_wardrobe">衣橱</string>
    <string name="title_mine">我的</string>
    <string name="title_welcome">Welcome to</string>
    <string name="title_oreo">Oreo造型</string>
    <string name="input_user_account">账号</string>
    <string name="input_user_password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="new_Account">新用户</string>
    <string name="nickname">昵称</string>
    <string name="age">年龄</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="confirm_password">再次确认密码</string>
    <string name="back">返回</string>
    <string name="cloth">衣服</string>
    <string name="trousers">裤子</string>
    <string name="shoes">鞋子</string>
    <string name="wardrobe">衣橱</string>
    <string name="recommend">穿搭推荐</string>
    <string name="mark">穿搭评分</string>
    <string name="account_information">账号信息</string>
    <string name="body_information">身材信息</string>
    <string name="setting">设置</string>
    <string name="modify">确认修改</string>
    <string name="cancel">取消</string>
    <string name="photo_library">从图库选择</string>
    <string name="take_photos">拍照</string>
    <string name="log_out">退出账号</string>
    <string name="my_dressing">我的穿搭</string>

</resources>