<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_take_photos"
        android:text="@string/take_photos"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <!--分割线-->
    <View
        android:background="#DCDCDC"
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/dialog_photo_library"
        android:text="@string/photo_library"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <View
        android:background="#DCDCDC"
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/dialog_cancel"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="58dp" />

</LinearLayout>

