<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/page_background"
    android:clipToOutline="true"
    tools:context=".Wardrobe_Fragment">
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wardrobe"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/cloth_button"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:background="@drawable/radiobutton"
            android:text="@string/cloth"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="50sp"/>

        <Button
            android:id="@+id/trousers_button"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:background="@drawable/radiobutton"
            android:text="@string/trousers"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="50sp"/>

        <Button
            android:id="@+id/shoes_button"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:background="@drawable/radiobutton"
            android:text="@string/shoes"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginBottom="50sp"/>
    </LinearLayout>
</LinearLayout>