<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@color/welcome_background">


    <EditText
        android:id="@+id/input_user_account"
        android:layout_width="400dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="410dp"
        android:background="@drawable/log_in_box"
        android:hint="@string/input_user_account"
        android:maxLines="1"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/input_user_password"
        android:layout_width="400dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="282dp"
        android:background="@drawable/log_in_box"
        android:hint="@string/input_user_password"
        android:maxLines="1"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/oero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="155dp"
        android:gravity="left|top"
        android:lineSpacingExtra="-7.6dp"
        android:text="@string/title_oreo"
        android:textAppearance="@style/titleFont"
        android:textFontWeight="400" />

    <View
        android:id="@+id/ellipse8"
        android:layout_width="92dp"
        android:layout_height="98dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/ic_ellipse8"
        android:clipToOutline="true"
        android:rotation="180" />

    <View
        android:id="@+id/ellipse4"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-99dp"
        android:layout_marginBottom="530dp"
        android:background="@drawable/ic_ellipse4"
        android:clipToOutline="true" />

    <View
        android:id="@+id/ellipse5"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-85dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="616dp"
        android:background="@drawable/ic_ellipse5"
        android:clipToOutline="true" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="587dp"
        android:layout_marginEnd="134dp"
        android:text="@string/register"
        android:textSize="20dp"
        android:textAppearance="@style/homepage_botton_font"
        android:background="@drawable/homepage_botton" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="181dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:textAppearance="@style/homepage_botton_font"
        android:background="@drawable/homepage_botton" />





</RelativeLayout>